k8s/kafdrop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  namespace: kafka
  labels:
    app: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka #name of deployed kafka service
  template:
    metadata:
      labels:
        app: kafka #name of deployed kafka service
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: kafka
spec:
  ports:
    - port: 9000
      targetPort: 9000
      name: kafdrop
      protocol: TCP
  selector:
    app: kafka
  type: LoadBalancer
