k8s/kafka.yaml
#apiVersion: kafka.strimzi.io/v1beta2
#kind: Kafka
#metadata:
#  name: kafka-cluster
#  namespace: kafka
#spec:
#  kafka:
#    version: 3.3.1
#    replicas: 3
#    listeners:
#      - name: plain
#        port: 9092
#        type: internal
#        tls: false
#      - name: tls
#        port: 9093
#        type: internal
#        tls: true
#    config:
#      offsets.topic.replication.factor: 1
#      transaction.state.log.replication.factor: 1
#      transaction.state.log.min.isr: 1
#      default.replication.factor: 1
#      min.insync.replicas: 1
#      inter.broker.protocol.version: "3.3"
#    storage:
#      type: ephemeral
#  zookeeper:
#    replicas: 1
#    storage:
#      type: ephemeral
#  entityOperator:
#    topicOperator: {}
#    userOperator: {}
#---
##apiVersion: kafka.strimzi.io/v1beta1
##kind: KafkaTopic
##metadata:
##  name: userevents
##  labels:
##    strimzi.io/cluster: "kafka-cluster"
##spec:
##  partitions: 1
##  replicas: 1
#---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    name: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - image: wurstmeister/zookeeper
          imagePullPolicy: IfNotPresent
          name: zookeeper
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: kafka
spec:
  type: NodePort
  ports:
    - name: zookeeper
      port: 2181
      nodePort: 30181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: kafka
      containers:
        - env:
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper.kafka.svc:2181
            - name: KAFKA_LISTENERS
              value: PLAINTEXT://:9092
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka-cluster.kafka.svc:9092
          image: wurstmeister/kafka
          imagePullPolicy: IfNotPresent
          name: kafka
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka-cluster
  namespace: kafka
spec:
  ports:
    - port: 9092
  selector:
    app: kafka
