k8s/mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: craft-mysql
  labels:
    name: craft-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: craft-mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:latest
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: craft-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  clusterIP: None
---
#kind: Service
#apiVersion: v1
#metadata:
#  name: mysql
#  namespace: craft-mysql
#spec:
#  type: ExternalName
#  externalName: mysql.mysql.svc
#  ports:
#    - port: 3306
---
