k8s/istio.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  ingressClassName: istio
  rules:
    - host: httpbin.example.com
      http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
